# rust-starter-pack

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.MD  build.rs
blueprint/: README.md
docs/: README.md
documentation/: README.md
scaffold/: README.md
scaffold/certs/: README.md
scaffold/docker/: Dockerfile  deployment.dockerfile  development.dockerfile  external-dev.dockerfile  internal-deploy.dockerfile  internal-dev.dockerfile
scaffold/docker-compose/: docker-compose.yaml
scaffold/migrations/: 20230321114545_provision.sql  atlas.sum  schema.hcl
scaffold/proto/: README.md  user.proto
scaffold/protobuf/: README.md  pet.proto
src/: README.md  lib.rs  main.rs
src/app/: .README.md  README.md
src/app/jobs/lumber/commands/: core.rs
src/app/jobs/lumber/templates/client/: client_base.hbs
src/app/jobs/lumber/templates/core/: core_with_all.hbs  core_with_client.hbs  core_with_store.hbs
src/app/jobs/lumber/templates/mods/: core_mod_base.hbs
src/app/jobs/scheduled/: main.rs
src/app/services/external-api/: README.md  config.rs  main.rs
src/app/services/external-api/mux/: mux.rs
src/app/services/external-api/mux/handlers/debug/: debug.rs
src/app/services/internal-api/: README.md  config.rs  main.rs
src/app/services/internal-api/rpc/: mod.rs  rpc.rs
src/app/services/internal-api/rpc/servers/: user.rs
src/app/services/rust-app/: main.rs
src/app/services/rust-web-api/: config.rs  main.rs
src/app/services/rust-web-api/handlers/: handlers.rs
src/app/services/rust-web-api/handlers/versions/version_one/: users.rs
src/app/services/rust-web-api/mux/: mod.rs  mux.rs
src/app/services/rust-web-api/mux/handlers/debug/: debug.rs
src/app/services/rust-web-api/mux/handlers/v1/: users.rs
src/app/services/rust-web-api/mux/versions/version_one/: users.rs
src/app/tools/lumber/: main.rs
src/app/tools/lumber/commands/: client.rs  core.rs  mod.rs  store.rs  worker.rs
src/app/tools/lumber/templates/: core.hbs  core.tmpl  db.hbs  store.tmpl  worker.hbs
src/app/tools/lumber/templates/client/: client_base.hbs
src/app/tools/lumber/templates/core/: core_base.hbs  core_with_all.hbs  core_with_client.hbs  core_with_store.hbs
src/app/tools/lumber/templates/mods/: client_mod_base.hbs  core_mod_all.hbs  core_mod_store.hbs  store_mod_base.hbs
src/app/tools/lumber/templates/store/: db_base.hbs  store_base.hbs
src/app/tools/ssl/: main.rs
src/app/tools/ssl/commands/: keygen.rs  token.rs
src/app/workers/scheduled/: main.rs
src/application/: README.md
src/application/services/rust-web-api/: config.rs  main.rs
src/application/services/rust-web-api/handlers/: handlers.rs  mod.rs
src/application/services/rust-web-api/mux/: mux.rs
src/application/tools/lumber/: main.rs
src/application/tools/lumber/commands/: client.rs  core.rs  store.rs
src/application/tools/lumber/templates/client/: client_base.hbs
src/application/tools/lumber/templates/core/: core_base.hbs  core_with_all.hbs  core_with_client.hbs  core_with_store.hbs
src/application/tools/lumber/templates/mods/: core_mod_client.hbs
src/application/tools/lumber/templates/store/: store_base.hbs
src/application/tools/ssl/: main.rs
src/application/tools/ssl/commands/: keygen.rs  mod.rs  token.rs
src/business/: .README.md  README.md
src/business/core/user/: mod.rs  models.rs  user.rs
src/business/core/user/stores/user_db/: mod.rs  user_db.rs
src/business/core/user/stores/userdb/: mod.rs  models.rs  userdb.rs
src/business/system/auth/: auth.rs  decode.rs  encode.rs
src/business/system/validation/: validation.rs
src/business/web/middleware/: audit.rs  auth.rs  error.rs  logging.rs  mod.rs
src/business/web/state/: handler.rs  middleware.rs  mod.rs  shared.rs  state.rs
src/core/: README.md
src/core/user/: mod.rs  user.rs
src/core/user/stores/user_db/: user_db.rs
src/dependency/: README.md
src/dependency/logger/: logger.rs
src/dependency/server/: server.rs
src/domain/: README.md
src/domain/system/auth/: auth.rs  decode.rs  encode.rs  mod.rs
src/domain/system/error/: error.rs
src/domain/web/middleware/: audit.rs  auth.rs  error.rs  logging.rs
src/domain/web/state/: state.rs
src/foundation/: README.md  mod.rs
src/foundation/database/: database.rs
src/foundation/logger/: logger.rs
src/foundation/server/: middleware.rs  server.rs
src/lib/: README.md
src/lib/database/: database.rs
src/lib/grpc/: server.rs
src/lib/logger/: logger.rs
src/lib/server/: server.rs
(+1 files in other folders)
