# ==============================================================================
# The package details for the given project.

[package]
name = "ultimate_rust_service"
version = "0.1.0"
edition = "2021"
authors = ["Adam Vincent"]

# ==============================================================================
# This is where we register our binaries for each service, worker, or tool you create.

# cargo run --bin rust-web-api
[[bin]]
name = "rust-web-api"
path = "src/app/services/rust-web-api/main.rs"

# cargo run --bin lumber
[[bin]]
name = "lumber"
path = "src/app/tools/lumber/main.rs"

# # cargo run --bin scheduled-worker
[[bin]]
name = "scheduled-worker"
path = "src/app/workers/scheduled/main.rs"


# ==============================================================================
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.6.12"
awc = "3.1.1"
log = "0.4.14"
env_logger = "0.10.0"
signal-hook = "0.3.15"
envy = "0.4"
dotenvy = "0.15.7"
tokio = { version = "1.26.0", features = ["full"] }
axum-macros = "0.3.7"
tower = "0.4.13"
