# ==============================================================================
# The package details for the given project.

[package]
name = "rust_starter_pack"
version = "0.1.0"
edition = "2021"
authors = ["Adam Vincent"]

# ==============================================================================
# This is where we register our binaries for each service, worker, or tool you create.

# cargo run --bin rust-web-api
[[bin]]
name = "rust-web-api"
path = "src/application/services/rust-web-api/main.rs"

# cargo run --bin lumber
[[bin]]
name = "lumber"
path = "src/application/tools/lumber/main.rs"

# # cargo run --bin scheduled-worker
[[bin]]
name = "scheduled-worker"
path = "src/application/workers/scheduled/main.rs"


# ==============================================================================
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
validator = { version = "0.16.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.6.12"
awc = "3.1.1"
log = "0.4.14"
env_logger = "0.10.0"
signal-hook = "0.3.15"
envy = "0.4"
dotenvy = "0.15.7"
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
async-trait = "0.1.68"
handlebars = "4.3.6"
serde_json = "1.0.95"
jsonwebtoken = "8"
tower-http = { version = "0.4.0", features = ["trace"] }
uuid = { version = "1.3.0", features = ["v4"] }
hyper = "0.14.25"
